--- a/IRCBot.cbp
+++ b/IRCBot.cbp
@@ -11,8 +11,10 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="-c dist/default.conf" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-DDEBUG" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -31,10 +33,28 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add directory="/home/basty/dev/c++/cb/IRCBot/" />
 		</Compiler>
+		<Linker>
+			<Add library="/usr/lib/libconfig++.so" />
+		</Linker>
+		<Unit filename="include/Controller.h" />
+		<Unit filename="include/Logger.h" />
+		<Unit filename="include/debug.h" />
+		<Unit filename="include/helper.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Controller.cpp" />
+		<Unit filename="src/Logger.cpp" />
+		<Unit filename="src/helper.cpp" />
+		<Unit filename="version.h" />
 		<Extensions>
 			<code_completion />
+			<AutoVersioning>
+				<Scheme minor_max="10" build_max="0" rev_max="0" rev_rand_max="10" build_times_to_increment_minor="100" />
+				<Settings autoincrement="1" date_declarations="1" do_auto_increment="1" ask_to_increment="0" language="C++" svn="0" svn_directory="" header_path="version.h" />
+				<Changes_Log show_changes_editor="0" app_title="released version %M.%m.%b of %p" changeslog_path="ChangesLog.txt" />
+				<Code header_guard="VERSION_H" namespace="AutoVersion" prefix="" />
+			</AutoVersioning>
 			<envvars />
 			<debugger />
 			<lib_finder disable_auto="1" />
