--- a/IRCBot.cbp
+++ b/IRCBot.cbp
@@ -41,14 +41,19 @@
 			<Add library="/usr/lib/libconfig++.so" />
 		</Linker>
 		<Unit filename="include/Controller.h" />
+		<Unit filename="include/IRC.h" />
+		<Unit filename="include/IRCMessageBuilder.h" />
 		<Unit filename="include/Logger.h" />
 		<Unit filename="include/Socket.h" />
 		<Unit filename="include/SocketException.h" />
 		<Unit filename="include/debug.h" />
 		<Unit filename="include/helper.h" />
+		<Unit filename="include/hooks.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="plugins.h" />
 		<Unit filename="src/Controller.cpp" />
+		<Unit filename="src/IRC.cpp" />
+		<Unit filename="src/IRCMessageBuilder.cpp" />
 		<Unit filename="src/Logger.cpp" />
 		<Unit filename="src/Socket.cpp" />
 		<Unit filename="src/SocketException.cpp" />
@@ -58,9 +63,9 @@
 			<code_completion />
 			<AutoVersioning>
 				<Scheme minor_max="10" build_max="0" rev_max="0" rev_rand_max="10" build_times_to_increment_minor="100" />
-				<Settings autoincrement="1" date_declarations="1" do_auto_increment="1" ask_to_increment="0" language="C++" svn="0" svn_directory="" header_path="version.h" />
+				<Settings autoincrement="1" date_declarations="1" do_auto_increment="1" ask_to_increment="0" language="C++" svn="0" svn_directory=" " header_path="version.h" />
 				<Changes_Log show_changes_editor="0" app_title="released version %M.%m.%b of %p" changeslog_path="ChangesLog.txt" />
-				<Code header_guard="VERSION_H" namespace="AutoVersion" prefix="" />
+				<Code header_guard="VERSION_H" namespace="AutoVersion" prefix=" " />
 			</AutoVersioning>
 			<envvars />
 			<debugger />
